--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="container">
         <div class="card">
             <h1>Happy Birthday Abhay Bhaiya!</h1>
-            <img src="birthday_cake.jpg" alt="Birthday Cake">
+            <img src="https://tse4.mm.bing.net/th?id=OIP.D65P2smLdGljNjeTSPyOPgHaHa&pid=Api&P=0&h=180" alt="Birthday Cake">
             <p>Wishing you a day filled with love, joy, and all your heart desires. May this year bring you great success and happiness. Cheers to another fantastic year ahead!</p>
             <button onclick="playBirthdaySong()">Play Birthday Song</button>
         </div>
